--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.2",
-    "@angular/cdk": "^17.0.0",
+    "@angular/cdk": "^19.0.4",
     "@angular/common": "^19.0.2",
     "@angular/compiler": "^19.0.2",
     "@angular/core": "^19.0.2",
     "@angular/forms": "^19.0.2",
-    "@angular/material": "^17.0.0",
+    "@angular/material": "^19.0.4",
     "@angular/platform-browser": "^19.0.2",
     "@angular/platform-browser-dynamic": "^19.0.2",
     "@angular/router": "^19.0.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@swimlane/ngx-charts": "^20.5.0",
+    "d3": "^7.9.0",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
