--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "buffer": "^6.0.3",
     "d3": "^7.9.0",
     "gapi-script": "^1.2.0",
+    "imagekit-javascript": "^4.0.1",
+    "imagekitio-angular": "^5.1.0",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.473.0",
     "lucide-angular": "^0.468.0",
